# arb-bot

./: .gitignore  Cargo.toml  README.md  SECURITY.md  canister_ids.json  dfx.json
.github/workflows/: opencode.yml
.interface-design/: redesign-brief.md  system.md
docs/design/: redesign-prototype.html
docs/plans/: 2026-04-01-arb-bot-design.md  2026-04-01-arb-bot-implementation.md  2026-04-06-dashboard-overhaul.md
docs/superpowers/plans/: 2026-04-10-volume-bot.md  2026-07-16-strategy-s-bob.md  2026-07-16-volume-bob.md
docs/superpowers/specs/: 2026-04-10-volume-bot-design.md  2026-07-16-strategy-s-bob-design.md
scripts/: check-candid.sh
src/arb_bot/: Cargo.toml  arb_bot.did
src/arb_bot/src/: arb.rs  dashboard.html  lib.rs  partydex.rs  prices.rs  state.rs  swaps.rs  volume.rs
src/arb_bot/tests/: candid.rs  state_decode.rs
