[package]
name = "arb_bot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.9"
ic-cdk-timers = "0.7"
icrc-ledger-types = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ic-stable-structures = "0.6"
futures = "0.3"
num-traits = "0.2"
